--- a/changelog.mdx
+++ b/changelog.mdx
@@ -3,6 +3,9 @@ title: "Polymarket Exchange Changelog"
 description: "API Updates and Announcements"
 mode: "center"
 ---
+<Update label="August 18, 2025" description="v0.0.10">
+  Aesthetic changes including new figures and cleaner formatting of FIX examples. 
+</Update>
 <Update label="August 14, 2025" description="v0.0.10">
   First DRAFT of Polymarket Exchange Documentation
 </Update>
