Visual Fixes on Bolded Items

--- a/api-reference/fix-api/ep3-fix-session-management.mdx
+++ b/api-reference/fix-api/ep3-fix-session-management.mdx
@@ -123,7 +123,7 @@ The Logout \[5] message initiates or confirms the termination of a FIX session. 
 
 The expected response to a successful Logout \[5] message is a reciprocal Logout \[5] message, after which the TCP connection should be dropped.
 
-Example 2: Logout message
+**Example 2: Logout message**
 ```
 8=FIXT.1.1 | 9=51 | 35=5 | 34=2 | 49=SENDER | 52=20240516-14:17:38 | 56=TARGET | 10=237 |
 ```
