--- a/index.mdx
+++ b/index.mdx
@@ -12,7 +12,7 @@ This guide provides a comprehensive overview of the Polymarket Exchange's platfo
     icon="hand"
     href="/getting-started/getting-access"
   >
-    Learn how to get and use an API Key.
+    Request access to the Polymarket Exchange
   </Card>
     <Card
     title="REST API Key Management"
