remove some code examples

--- a/streaming-endpoints/code-examples.mdx
+++ b/streaming-endpoints/code-examples.mdx
@@ -6,7 +6,7 @@ description: "Complete working Python examples from the ep3-python-examples repo
 
 # Complete Python Code Examples
 
-Production-ready examples for gRPC streaming using Python, directly from the [ep3-python-examples repository](https://github.com/connamara/ep3-python-examples).
+Code examples for gRPC streaming using Python, please contact support@qcex.com for access to these files.
 
 ## Installation
 
