--- a/streaming-endpoints/grpc-overview.mdx
+++ b/streaming-endpoints/grpc-overview.mdx
@@ -65,14 +65,15 @@ Subscribe to real-time order and execution updates:
 
 ## Server Endpoints
 
-### Staging Environment
+
+### Pre-Production Environment
 ```
-traderapi.staging.polymarket.us:443
+traderapi.us-east-1.privatelink.preprod.polymarketexchange.com:443
 ```
 
 ### Production Environment
 ```
-traderapi.polymarket.us:443
+traderapi.us-east-1.privatelink.prod.polymarketexchange.com:443
 ```
 
 <Info>
@@ -125,27 +126,6 @@ graph LR
 
 [Learn more about Authentication →](/streaming-endpoints/authentication)
 
-## Common Use Cases
-
-### Market Making
-- Monitor order book depth in real-time
-- React to market changes with microsecond precision
-- Track own order fills and positions
-
-### Trading Applications
-- Display live market data to users
-- Show order status updates in real-time
-- Build trading dashboards
-
-### Risk Management
-- Monitor positions across accounts
-- Track execution quality
-- Audit order flow in real-time
-
-### Analytics & Research
-- Collect tick-by-tick market data
-- Analyze order flow patterns
-- Build market microstructure datasets
 
 ## Key Concepts
 
