--- a/streaming-endpoints/getting-started.mdx
+++ b/streaming-endpoints/getting-started.mdx
@@ -145,7 +145,9 @@ for response in response_stream:
 <Note>
 **Price Representation**: All prices are represented as `int64` values. Divide by `10000` to get the decimal price.
 
-Example: `52500` → `52500 / 10000 = 5.25`
+Prices are always between **$0.001 and $0.999 USD**.
+
+Example: `5250` → `5250 / 10000 = $0.5250`
 </Note>
 
 
