--- a/getting-started/common-pitfalls.mdx
+++ b/getting-started/common-pitfalls.mdx
@@ -52,7 +52,7 @@ If the full endpoint also times out, review your VPC security group settings:
 
 - Set inbound rules to `0.0.0.0/0` for all traffic
 - Set outbound rules to `0.0.0.0/0` for all traffic
-- **Restart your instance** after making changes to ensure they propagate
+These settings are suggested for testing only and not recommended for production Security Groups
 
 ### Curl Command Drops to Blinking Cursor
 
