fix: update domains to use preprod.polymarketexchange.com

--- a/streaming-endpoints/authentication.mdx
+++ b/streaming-endpoints/authentication.mdx
@@ -64,7 +64,7 @@ from connamara.ep3.v1beta1 import market_data_pb2_grpc
 
 # Create secure channel
 credentials = grpc.ssl_channel_credentials()
-channel = grpc.secure_channel('traderapi.staging.polymarket.us:443', credentials)
+channel = grpc.secure_channel('traderapi.us-east-1.privatelink.preprod.polymarketexchange.com:443', credentials)
 
 # Create stub
 stub = market_data_pb2_grpc.MarketDataSubscriptionAPIStub(channel)
