--- a/streaming-endpoints/order-stream.mdx
+++ b/streaming-endpoints/order-stream.mdx
@@ -249,8 +249,8 @@ from connamara.ep3.orders.v1beta1 import orders_pb2
 
 
 class PolymarketOrderStreamer:
-    def __init__(self, base_url: str = "https://rest.staging.polymarket.us",
-                 grpc_server: str = "traderapi.staging.polymarket.us:443"):
+    def __init__(self, base_url: str = "https://rest.preprod.polymarketexchange.com",
+                 grpc_server: str = "traderapi.us-east-1.privatelink.preprod.polymarketexchange.com:443"):
         self.base_url = base_url
         self.grpc_server = grpc_server
         self.access_token: Optional[str] = None
