--- a/streaming-endpoints/proto-reference.mdx
+++ b/streaming-endpoints/proto-reference.mdx
@@ -31,10 +31,10 @@ Proto files are available:
 
 ```bash
 # List all services using grpcurl
-grpcurl traderapi.staging.polymarket.us:443 list
+grpcurl traderapi.us-east-1.privatelink.preprod.polymarketexchange.com:443 list
 
 # Describe a specific service
-grpcurl traderapi.staging.polymarket.us:443 describe \
+grpcurl traderapi.us-east-1.privatelink.preprod.polymarketexchange.com:443 describe \
   connamara.ep3.v1beta1.MarketDataSubscriptionAPI
 ```
 
