--- a/streaming-endpoints/market-data-stream.mdx
+++ b/streaming-endpoints/market-data-stream.mdx
@@ -112,8 +112,6 @@ Each price level in the order book contains:
 **Price Representation:**
 All prices are `int64` values scaled by **10000**.
 
-Prices are always between **$0.0001 and $0.9999 USD**.
-
 **Example:**
 - Raw value: `5000`
 - Decimal price: `5000 / 10000 = 0.5 USD`
@@ -123,6 +121,8 @@ Prices are always between **$0.0001 and $0.9999 USD**.
 px = bid.px / 10000  # Convert from price representation
 print(f"${px:.4f}")  # Display as $0.50
 ```
+
+Prices are always between **\$0.001 and \$0.999 USD** so the last digit in `px` will always be `0` (e.g. $0.342 => 3420).
 </Warning>
 
 ### InstrumentStats Structure
