--- a/streaming-endpoints/order-stream.mdx
+++ b/streaming-endpoints/order-stream.mdx
@@ -136,14 +136,15 @@ if response.HasField('update'):
 <Warning>
 **Price Fields:**
 - `price`, `avg_px`, `stop_price` are `int64` scaled by **10000**
-- Prices are always between **$0.001 and $0.999 USD**
+- Prices are always between **\$0.001 and \$0.999 USD**
 - Example: `5250` → `5250 / 10000 = $0.5250`
 
 ```python
-if order.price > 0:
-    price = order.price / 10000  # Convert from price representation
-    print(f"Price: ${price:.4f}")
+price = order.price / 10000  # Convert from price representation
+print(f"Price: ${price:.4f}")
 ```
+
+Prices are always between **\$0.001 and \$0.999 USD** so the last digit will always be `0` (e.g. $0.342 => 3420).
 </Warning>
 
 ### Order States
