--- a/changelog.mdx
+++ b/changelog.mdx
@@ -3,6 +3,11 @@ title: "Polymarket Exchange Changelog"
 description: "API Updates and Announcements"
 mode: "center"
 ---
+<Update label="December 8, 2025" description="v0.0.13">
+ - Added 25 REST API endpoints with full OpenAPI documentation
+ - New sections: Authentication, Accounts, Orders, Positions, Market Data, Drop Copy
+ - Organized API documentation by functional category
+</Update>
 <Update label="November 25, 2025" description="v0.0.12">
  - Added complete gRPC streaming API documentation with Python code examples for market data and order execution streams
  - Introduced Protocol Buffer reference documentation with detailed message structures and field definitions
