--- a/index.mdx
+++ b/index.mdx
@@ -17,7 +17,7 @@ This guide provides a comprehensive overview of the Polymarket Exchange's platfo
     <Card
     title="REST API Key Management"
     icon="key"
-    href="/api-reference/auth"
+    href="/api-reference/v1beta1/login"
   >
     Learn how to get and use an API Key.
   </Card>
